--- a/index.html
+++ b/index.html
@@ -130,21 +130,47 @@
         </div>
         <div class="row py-5 px-4 align-items-center">
             <div class="col-md-6 order-md-1 text-center px-3 px-md-0 d-flex justify-content-center align-items-center">
-                <div class="img-container-1 d-flex justify-content-center align-items-center">
-                    <img src="resources\img-1.jpg" class="img-fluid" alt="">
+                <div id="carouselExample" class="carousel slide img-container-1" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="resources/img-1.jpg" class="img-fluid" alt="Imagen 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="resources/img-1.jpg" class="img-fluid" alt="Imagen 2">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="resources/img-1.jpg" class="img-fluid" alt="Imagen 3">
+                        </div>
+                    </div>
+                    <!-- Controles de navegación -->
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Anterior</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Siguiente</span>
+                    </button>
                 </div>
             </div>
+
             <div class="col-md-6 order-md-2 px-4 px-md-0">
                 <h2 class="custom-h">¿Qué es la DUACyD?</h2>
                 <div class="text-container-1">
-                    <p class="text-white">La DUACyD (División de Universidad Abierta, Continua y a Distancia) en la <b>FES Aragón</b> de la
-                        UNAM es una plataforma educativa que ofrece servicios de actualización, capacitación profesional y
-                        profundización de conocimientos. A través de esta <b>división</b>, se imparten diversos eventos académicos
-                        como <b>diplomados, cursos, talleres y seminarios.</b> La DUACyD busca vincular los fines curriculares con
-                        la construcción del conocimiento y el desempeño profesional.</p>
+                    <p class="text-white">
+                        La DUACyD (División de Universidad Abierta, Continua y a Distancia) en la <b>FES Aragón</b> de
+                        la UNAM es una plataforma educativa que ofrece servicios de actualización, capacitación
+                        profesional y profundización de conocimientos.
+                        A través de esta <b>división</b>, se imparten diversos eventos académicos como <b>diplomados,
+                            cursos, talleres y seminarios.</b> La DUACyD busca vincular los fines curriculares con la
+                        construcción del conocimiento y el desempeño profesional.
+                    </p>
                 </div>
             </div>
         </div>
+
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
