--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 
                     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                         <ul class="navbar-nav mx-auto">
-                            <li class="nav-item"><a class="nav-link nav-item-text" href="#">Inicio</a></li>
+                            <li class="nav-item"><a class="nav-link nav-item-text" href="#"><i class="fa-solid fa-house"></i> Inicio</a></li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
-                                    aria-expanded="false">Acerca de</a>
+                                <a class="nav-link dropdown-toggle nav-item-text" data-bs-toggle="dropdown" href="#" role="button"
+                                    aria-expanded="false"><i class="fa-solid fa-user"></i> Acerca de</a>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="#">Opción 1</a></li>
                                     <li><a class="dropdown-item" href="#">Opción 2</a></li>
@@ -50,8 +50,8 @@
                                 </ul>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
-                                    aria-expanded="false">Oferta Educativa</a>
+                                <a class="nav-link dropdown-toggle nav-item-text" data-bs-toggle="dropdown" href="#" role="button"
+                                    aria-expanded="false"><i class="fa-solid fa-book"></i> Oferta Educativa</a>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="#">Opción 1</a></li>
                                     <li><a class="dropdown-item" href="#">Opción 2</a></li>
@@ -63,8 +63,8 @@
                                 </ul>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
-                                    aria-expanded="false">Estadísticas</a>
+                                <a class="nav-link dropdown-toggle nav-item-text" data-bs-toggle="dropdown" href="#" role="button"
+                                    aria-expanded="false"><i class="fa-solid fa-chart-simple"></i> Estadísticas</a>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="#">Opción 1</a></li>
                                     <li><a class="dropdown-item" href="#">Opción 2</a></li>
@@ -76,8 +76,8 @@
                                 </ul>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
-                                    aria-expanded="false">Contacto</a>
+                                <a class="nav-link dropdown-toggle nav-item-text" data-bs-toggle="dropdown" href="#" role="button"
+                                    aria-expanded="false"><i class="fa-solid fa-phone"></i> Contacto</a>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="#">Opción 1</a></li>
                                     <li><a class="dropdown-item" href="#">Opción 2</a></li>
@@ -89,8 +89,8 @@
                                 </ul>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
-                                    aria-expanded="false">Preguntas Frecuentes</a>
+                                <a class="nav-link dropdown-toggle nav-item-text" data-bs-toggle="dropdown" href="#" role="button"
+                                    aria-expanded="false"><i class="fa-solid fa-question"></i> Preguntas Frecuentes</a>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="#">Opción 1</a></li>
                                     <li><a class="dropdown-item" href="#">Opción 2</a></li>
@@ -101,16 +101,13 @@
                                     <li><a class="dropdown-item" href="#">Opción 4</a></li>
                                 </ul>
                             </li>
-
                         </ul>
                     </div>
                 </nav>
             </div>
-
             <div class="col-6 d-md-none d-flex justify-content-center">
                 <h1 class="text-center text-white">DUACyD</h1>
             </div>
-
             <!-- Sección Derecha (Espacio para futuros elementos como botones, buscador, etc.) -->
             <div class="col-3 text-end">
                 <!-- Puedes agregar contenido aquí si lo necesitas -->
@@ -123,6 +120,7 @@
             <div class="custom-text-1 d-none d-lg-block">
                 <h1>Bienvenidos a DUACyD</h1>
                 <h3>División de Universidad Abierta, Continua y a Distancia</h3>
+                <h4>Educación continua y flexible para tu desarrollo profesional</h4>
             </div>
         </div>
         <div class="row py-4 d-lg-none d-flex justify-content-center ">
@@ -170,9 +168,10 @@
                 </div>
             </div>
         </div>
-
+        <div class="row">
+            a
+        </div>
     </main>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
